# trlt

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  cog.toml  deny.toml  justfile
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml  codeql.yml
hooks/: pre-commit.sh
scripts/: setup.sh
src/: cli.rs  config.rs  error.rs  input.rs  lib.rs  main.rs  translate.rs  wizard.rs
src/provider/: anthropic.rs  mod.rs  ollama.rs  openai.rs
tests/: cli.rs
