[package]
name = "trlt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
clap = { version = "4.5.20", features = ["derive", "env"] }
dirs = "5.0.1"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
serde_json = "1.0.132"
toml = "0.8.19"
derive_more = { version = "1.0.0", features = ["from", "display"] }
clipboard = "0.5.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
pretty_assertions = "1.4.1"
rand = "0.8.5"
tempfile = "3.13.0"
