[package]
name = "trlt"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Highlander Paiva <contact@hvpaiva.dev>"]
description = "A multi-provider CLI translator powered by LLMs"
license = "MIT"
repository = "https://github.com/hvpaiva/trlt"
readme = "README.md"
keywords = ["translate", "cli", "openai", "anthropic", "ollama"]
categories = ["command-line-utilities"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow = "1"
arboard = "3"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4"
dirs = "6"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"
tempfile = "3"
